--- a/backend/package.json
+++ b/backend/package.json
@@ -26,12 +26,14 @@
     "@mikro-orm/migrations": "^5.5.0",
     "@mikro-orm/nestjs": "^5.1.2",
     "@mikro-orm/postgresql": "^5.5.0",
+    "@mikro-orm/seeder": "^5.5.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@types/passport-jwt": "^3.0.7",
     "@types/uuid": "^8.3.4",
     "bcrypt": "^5.1.0",
     "class-validator": "^0.13.2",
