--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,4 +1,8 @@
 JWT_SECRET=
 POSTGRES_DB= 
 POSTGRES_USER= 
-POSTGRES_PASSWORD= 
+POSTGRES_PASSWORD=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_S3_REGION=
+AWS_S3_BUCKET=
