--- a/backend/package.json
+++ b/backend/package.json
@@ -33,10 +33,13 @@
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@types/multer": "^1.4.7",
     "@types/passport-jwt": "^3.0.7",
     "@types/uuid": "^8.3.4",
+    "aws-sdk": "^2.1245.0",
     "bcrypt": "^5.1.0",
     "class-validator": "^0.13.2",
+    "geolib": "^3.3.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
