--- a/backend/package.json
+++ b/backend/package.json
@@ -21,54 +21,54 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@mikro-orm/cli": "^5.5.0",
-    "@mikro-orm/core": "^5.5.0",
-    "@mikro-orm/migrations": "^5.5.0",
-    "@mikro-orm/nestjs": "^5.1.2",
-    "@mikro-orm/postgresql": "^5.5.0",
-    "@mikro-orm/seeder": "^5.5.0",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/jwt": "^9.0.0",
-    "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^8.0.0",
-    "@types/multer": "^1.4.7",
-    "@types/passport-jwt": "^3.0.7",
-    "@types/uuid": "^8.3.4",
-    "aws-sdk": "^2.1245.0",
-    "bcrypt": "^5.1.0",
-    "class-validator": "^0.13.2",
-    "geolib": "^3.3.3",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "uuid": "^9.0.0"
+    "@mikro-orm/cli": "5.5.0",
+    "@mikro-orm/core": "5.5.0",
+    "@mikro-orm/migrations": "5.5.0",
+    "@mikro-orm/nestjs": "5.1.2",
+    "@mikro-orm/postgresql": "5.5.0",
+    "@mikro-orm/seeder": "5.5.0",
+    "@nestjs/common": "8.0.0",
+    "@nestjs/config": "2.2.0",
+    "@nestjs/core": "8.0.0",
+    "@nestjs/jwt": "9.0.0",
+    "@nestjs/passport": "9.0.0",
+    "@nestjs/platform-express": "8.0.0",
+    "@types/multer": "1.4.7",
+    "@types/passport-jwt": "3.0.7",
+    "@types/uuid": "8.3.4",
+    "aws-sdk": "2.1245.0",
+    "bcrypt": "5.1.0",
+    "class-validator": "0.13.2",
+    "geolib": "3.3.3",
+    "passport": "0.6.0",
+    "passport-jwt": "4.0.0",
+    "reflect-metadata": "0.1.13",
+    "rimraf": "3.0.2",
+    "rxjs": "7.2.0",
+    "uuid": "9.0.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@types/express": "^4.17.13",
+    "@nestjs/cli": "8.0.0",
+    "@nestjs/schematics": "8.0.0",
+    "@nestjs/testing": "8.0.0",
+    "@types/express": "4.17.13",
     "@types/jest": "27.0.2",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.2.5",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "@types/node": "16.0.0",
+    "@types/supertest": "2.0.11",
+    "@typescript-eslint/eslint-plugin": "5.0.0",
+    "@typescript-eslint/parser": "5.0.0",
+    "eslint": "8.0.1",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "jest": "27.2.5",
+    "prettier": "2.3.2",
+    "source-map-support": "0.5.20",
+    "supertest": "6.1.3",
+    "ts-jest": "27.0.3",
+    "ts-loader": "9.2.3",
+    "ts-node": "10.0.0",
+    "tsconfig-paths": "3.10.1",
+    "typescript": "4.3.5"
   },
   "mikro-orm": {
     "useTsNode": true,
